--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ header img {
 .card-group {
     display: flex !important;
     flex-direction: row !important;
+    /*flex-direction: column !important;*/
     gap: 2px; 
 }
 
@@ -140,6 +141,7 @@ header img {
     border: 0.5px dotted red;
 
     text-align: center;
+    /*margin-left: auto;*/
 }
 
 #section-projets .card-img-logo{
